put the uh link

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="https://uzairharunani.github.io/uz10/b">Brown Bears</a></li>
         <li><a href="https://uzairharunani.github.io/uz10/earth">Protecting Our Planet Starts with You</a></li>
         <li><a href="https://uzairharunani.github.io/db">Desserts Bay</a></li>
+        <li><a href="https://uzairharunani.github.io/uz10/uh">Uzair's Help</a></li>
       </ul>
     </body>
 
