--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     </head>
 
     <body>
-      <h1 class="headin" align="center"><u>MY WEBSITES</u></h1>
+
+      <h1 class="first" align="center">UZAIR HARUNANI
+        <img src="https://uzairharunani.github.io/uz10/me.jpg">
+      </h1>
+
+
+      <h2 class="headin" align="center"><u>MY WEBSITES</u></h2>
 
         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;List of my websites</p>
       <ul>
