edit fonts n put img in place

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
     <body>
 
-      <h1 class="first" align="center">UZAIR HARUNANI
-        <img src="https://uzairharunani.github.io/uz10/me.jpg">
-      </h1>
+      <h1 class="first" align="center">UZAIR HARUNANI<br>
+      <img src="https://uzairharunani.github.io/uz10/me.jpg"></h1>
 
 
       <h2 class="headin" align="center"><u>MY WEBSITES</u></h2>
